Add rate limiting to stock price fetching and update tests for InterruptedException